--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,21 +2,21 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/homeFrag"
+        android:id="@+id/homeFragment"
         android:icon="@drawable/ic_home"
         android:title="@string/home" />
 
     <item
-        android:id="@+id/exploreFrag"
+        android:id="@+id/exploreFragment"
         android:icon="@drawable/ic_explore"
         android:title="@string/explore" />
 
     <item
-        android:id="@+id/redeemFrag"
+        android:id="@+id/redeemFragment"
         android:icon="@drawable/ic_redeem"
         android:title="@string/redeem" />
     <item
-        android:id="@+id/profileFrag"
+        android:id="@+id/profileFragment"
         android:icon="@drawable/ic_profile"
         android:title="@string/profile" />
 
