--- a/app/src/main/res/layout/activity_shop_register.xml
+++ b/app/src/main/res/layout/activity_shop_register.xml
@@ -50,9 +50,16 @@
         android:inputType="textPostalAddress" />
 
     <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Upload Images"
+        android:id="@+id/btnShopRegisterUploadImage"/>
+
+    <Button
         android:id="@+id/btnShopRegisterSubmit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="Submit" />
+
 </LinearLayout>
