--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -30,10 +30,11 @@
                     android:src="@drawable/ic_profile" />
 
                 <TextView
-                    android:id="@+id/textView"
+                    android:id="@+id/tvProfileName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="Name"
+                    android:textColor="@android:color/black" />
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
@@ -103,6 +104,29 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="5"
                 android:text="Setting" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/llProfileLogout"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="20dp"
+            android:clickable="true"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imageView10"
+                android:layout_width="wrap_content"
+                android:layout_height="45dp"
+                android:layout_weight="1"
+                tools:src="@android:drawable/btn_star_big_off" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"
+                android:text="Logout" />
         </LinearLayout>
 
     </LinearLayout>
