--- a/app/src/main/res/layout/activity_ads_player.xml
+++ b/app/src/main/res/layout/activity_ads_player.xml
@@ -4,12 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:layout_gravity="center"
+    android:background="@android:color/black"
+    android:orientation="vertical"
     tools:context=".MainArea.HomeFragment.AdsPlayerActivity">
 
     <VideoView
         android:id="@+id/vvAds"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true" />
+
 </LinearLayout>
