--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,49 +2,73 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#DAE0E2"
     android:gravity="center"
     android:orientation="vertical"
+    android:padding="20dp"
     tools:context=".Login.LoginActivity">
 
 
     <EditText
         android:id="@+id/etLoginName"
+        style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/et_border"
         android:ems="10"
         android:hint="name "
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:padding="20dp" />
 
     <EditText
         android:id="@+id/etLoginAge"
+        style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/et_border"
         android:ems="10"
-        android:hint="Enter Your Age"
-        android:inputType="date" />
+        android:hint="Age "
+        android:inputType="date"
+        android:padding="20dp" />
+
     <Spinner
         android:id="@+id/spLoginLocality"
+        style="@style/AppTheme"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
+        android:layout_marginTop="15dp"
+        android:background="@drawable/et_border" />
 
     <EditText
         android:id="@+id/etLoginMobileNo"
+        style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/et_border"
+
         android:ems="10"
         android:hint="Enter Your Mobile Number"
-        android:inputType="phone" />
+        android:inputType="phone"
+        android:padding="20dp" />
 
     <EditText
         android:id="@+id/etLoginOTP"
+        style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/et_border"
         android:ems="10"
         android:hint="Enter OTP"
         android:inputType="phone"
+        android:padding="20dp"
         android:visibility="gone" />
 
     <Button
@@ -52,14 +76,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
+        android:background="@drawable/coin_back"
         android:text="Next" />
 
     <Button
         android:id="@+id/btnLoginSubmit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/coin_back"
         android:text="Submit"
-        android:visibility="gone"/>
+        android:visibility="gone" />
+
     <TextView
         android:id="@+id/tvLoginResend"
         android:layout_width="match_parent"
@@ -67,22 +94,6 @@
         android:layout_marginTop="20dp"
         android:text="Resend"
         android:textAlignment="center"
-        android:visibility="gone"/>
-
-    <TextView
-        android:id="@+id/tvLoginShopRegister"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Click Here To Register Shop"
-        android:textAlignment="center" />
-
-    <TextView
-        android:id="@+id/tvLoginCouponRegister"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Click Here To Register Coupon"
-        android:textAlignment="center" />
+        android:visibility="gone" />
 
 </LinearLayout>
