--- a/app/src/main/res/layout/childrv_redeem_layout.xml
+++ b/app/src/main/res/layout/childrv_redeem_layout.xml
@@ -1,23 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="15dp"
+    android:background="@drawable/et_border"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#E8D1CECE"
+        android:padding="10dp"
+        app:cardCornerRadius="15dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="#E8D1CECE"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tvCouponTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#E8D1CECE"
+                android:background="#A4B0BD"
 
                 android:gravity="center"
                 android:text="CouponTitle"
@@ -26,9 +33,11 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="20dp"
-                android:orientation="horizontal">
+                android:layout_height="80dp"
+                android:background="#E8D1CECE"
+                android:orientation="horizontal"
+                android:paddingTop="20dp"
+                android:paddingBottom="10dp">
 
                 <TextView
                     android:id="@+id/tvRedeemDescription"
