--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,6 +5,7 @@
     android:id="@+id/btnplay"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#EAF0F1"
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".MainArea.HomeFragment.HomeFrag">
